[project]
name = "workflow-project"
version = "0.1.0"
description = ""
authors = [
    {name = "shraddhazpy"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain-core (>=0.3.75,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "gradio (==5.44.1)",
    "langfuse (>=3.3.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "workflow_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
